Parcial LPT/PruebaGramatica/pockets/grammar/pocketsParser.py
# Generated from grammar/pockets.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pocketsParser ( Parser ):

    grammarFileName = "pockets.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "'*'", "'('", "')'", "'='", 
                     "'!'", "'-'", "'+'", "'>'", "'>='", "'<'", "'<='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "CREATE", "SELECT", "FROM", 
                      "FILE", "INSERT", "INTO", "ROWS", "UPDATE", "SET", 
                      "WHERE", "DELETE", "NULL", "DOT", "COMMA", "ASTERISK", 
                      "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "EQUALS", 
                      "NOT", "MINUS", "PLUS", "GT", "GE", "LT", "LE", "NE", 
                      "AND", "OR", "QUOTED_STRING", "INTEGER_VALUE", "DECIMAL_VALUE", 
                      "IDENTIFIER", "WS" ]

    RULE_pocket = 0
    RULE_statement = 1
    RULE_create = 2
    RULE_insert = 3
    RULE_delete = 4
    RULE_select = 5
    RULE_columnNames = 6
    RULE_values = 7
    RULE_constants = 8
    RULE_expressionList = 9
    RULE_booleanExpression = 10
    RULE_compare = 11
    RULE_expression = 12
    RULE_identifier = 13
    RULE_constant = 14
    RULE_fileIdentifier = 15

    ruleNames =  [ "pocket", "statement", "create", "insert", "delete", 
                   "select", "columnNames", "values", "constants", "expressionList", 
                   "booleanExpression", "compare", "expression", "identifier", 
                   "constant", "fileIdentifier" ]

    EOF = Token.EOF
    T__0=1
    CREATE=2
    SELECT=3
    FROM=4
    FILE=5
    INSERT=6
    INTO=7
    ROWS=8
    UPDATE=9
    SET=10
    WHERE=11
    DELETE=12
    NULL=13
    DOT=14
    COMMA=15
    ASTERISK=16
    LEFT_PARENTHESIS=17
    RIGHT_PARENTHESIS=18
    EQUALS=19
    NOT=20
    MINUS=21
    PLUS=22
    GT=23
    GE=24
    LT=25
    LE=26
    NE=27
    AND=28
    OR=29
    QUOTED_STRING=30
    INTEGER_VALUE=31
    DECIMAL_VALUE=32
    IDENTIFIER=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PocketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pocketsParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.StatementContext)
            else:
                return self.getTypedRuleContext(pocketsParser.StatementContext,i)


        def getRuleIndex(self):
            return pocketsParser.RULE_pocket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPocket" ):
                listener.enterPocket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPocket" ):
                listener.exitPocket(self)




    def pocket(self):

        localctx = pocketsParser.PocketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pocket)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 6, 12]:
                    self.state = 32
                    self.statement()
                    pass
                elif token in [1]:
                    self.state = 33
                    self.match(pocketsParser.T__0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4174) != 0)):
                    break

            self.state = 38
            self.match(pocketsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create(self):
            return self.getTypedRuleContext(pocketsParser.CreateContext,0)


        def insert(self):
            return self.getTypedRuleContext(pocketsParser.InsertContext,0)


        def delete(self):
            return self.getTypedRuleContext(pocketsParser.DeleteContext,0)


        def select(self):
            return self.getTypedRuleContext(pocketsParser.SelectContext,0)


        def getRuleIndex(self):
            return pocketsParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = pocketsParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 44
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.create()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.insert()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.delete()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.select()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(pocketsParser.CREATE, 0)

        def FILE(self):
            return self.getToken(pocketsParser.FILE, 0)

        def fileIdentifier(self):
            return self.getTypedRuleContext(pocketsParser.FileIdentifierContext,0)


        def columnNames(self):
            return self.getTypedRuleContext(pocketsParser.ColumnNamesContext,0)


        def getRuleIndex(self):
            return pocketsParser.RULE_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)




    def create(self):

        localctx = pocketsParser.CreateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(pocketsParser.CREATE)
            self.state = 47
            self.match(pocketsParser.FILE)
            self.state = 48
            self.fileIdentifier()
            self.state = 49
            self.columnNames()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(pocketsParser.INSERT, 0)

        def INTO(self):
            return self.getToken(pocketsParser.INTO, 0)

        def FILE(self):
            return self.getToken(pocketsParser.FILE, 0)

        def fileIdentifier(self):
            return self.getTypedRuleContext(pocketsParser.FileIdentifierContext,0)


        def columnNames(self):
            return self.getTypedRuleContext(pocketsParser.ColumnNamesContext,0)


        def ROWS(self):
            return self.getToken(pocketsParser.ROWS, 0)

        def values(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.ValuesContext)
            else:
                return self.getTypedRuleContext(pocketsParser.ValuesContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.COMMA)
            else:
                return self.getToken(pocketsParser.COMMA, i)

        def getRuleIndex(self):
            return pocketsParser.RULE_insert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert" ):
                listener.enterInsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert" ):
                listener.exitInsert(self)




    def insert(self):

        localctx = pocketsParser.InsertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_insert)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(pocketsParser.INSERT)
            self.state = 52
            self.match(pocketsParser.INTO)
            self.state = 53
            self.match(pocketsParser.FILE)
            self.state = 54
            self.fileIdentifier()
            self.state = 55
            self.columnNames()
            self.state = 56
            self.match(pocketsParser.ROWS)
            self.state = 57
            self.values()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 58
                self.match(pocketsParser.COMMA)
                self.state = 59
                self.values()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(pocketsParser.DELETE, 0)

        def FILE(self):
            return self.getToken(pocketsParser.FILE, 0)

        def fileIdentifier(self):
            return self.getTypedRuleContext(pocketsParser.FileIdentifierContext,0)


        def getRuleIndex(self):
            return pocketsParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)




    def delete(self):

        localctx = pocketsParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(pocketsParser.DELETE)
            self.state = 66
            self.match(pocketsParser.FILE)
            self.state = 67
            self.fileIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(pocketsParser.SELECT, 0)

        def expressionList(self):
            return self.getTypedRuleContext(pocketsParser.ExpressionListContext,0)


        def FROM(self):
            return self.getToken(pocketsParser.FROM, 0)

        def FILE(self):
            return self.getToken(pocketsParser.FILE, 0)

        def fileIdentifier(self):
            return self.getTypedRuleContext(pocketsParser.FileIdentifierContext,0)


        def WHERE(self):
            return self.getToken(pocketsParser.WHERE, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(pocketsParser.BooleanExpressionContext,0)


        def getRuleIndex(self):
            return pocketsParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)




    def select(self):

        localctx = pocketsParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(pocketsParser.SELECT)
            self.state = 70
            self.expressionList()
            self.state = 71
            self.match(pocketsParser.FROM)
            self.state = 72
            self.match(pocketsParser.FILE)
            self.state = 73
            self.fileIdentifier()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 74
                self.match(pocketsParser.WHERE)
                self.state = 75
                self.booleanExpression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNamesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(pocketsParser.LEFT_PARENTHESIS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(pocketsParser.IdentifierContext,i)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(pocketsParser.RIGHT_PARENTHESIS, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.COMMA)
            else:
                return self.getToken(pocketsParser.COMMA, i)

        def getRuleIndex(self):
            return pocketsParser.RULE_columnNames

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnNames" ):
                listener.enterColumnNames(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnNames" ):
                listener.exitColumnNames(self)




    def columnNames(self):

        localctx = pocketsParser.ColumnNamesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnNames)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(pocketsParser.LEFT_PARENTHESIS)
            self.state = 79
            self.identifier()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 80
                self.match(pocketsParser.COMMA)
                self.state = 81
                self.identifier()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(pocketsParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENTHESIS(self):
            return self.getToken(pocketsParser.LEFT_PARENTHESIS, 0)

        def constants(self):
            return self.getTypedRuleContext(pocketsParser.ConstantsContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(pocketsParser.RIGHT_PARENTHESIS, 0)

        def getRuleIndex(self):
            return pocketsParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)




    def values(self):

        localctx = pocketsParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_values)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(pocketsParser.LEFT_PARENTHESIS)
            self.state = 90
            self.constants()
            self.state = 91
            self.match(pocketsParser.RIGHT_PARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.ConstantContext)
            else:
                return self.getTypedRuleContext(pocketsParser.ConstantContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.COMMA)
            else:
                return self.getToken(pocketsParser.COMMA, i)

        def getRuleIndex(self):
            return pocketsParser.RULE_constants

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstants" ):
                listener.enterConstants(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstants" ):
                listener.exitConstants(self)




    def constants(self):

        localctx = pocketsParser.ConstantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.constant()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 94
                self.match(pocketsParser.COMMA)
                self.state = 95
                self.constant()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pocketsParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.COMMA)
            else:
                return self.getToken(pocketsParser.COMMA, i)

        def getRuleIndex(self):
            return pocketsParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)




    def expressionList(self):

        localctx = pocketsParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.expression()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 102
                self.match(pocketsParser.COMMA)
                self.state = 103
                self.expression()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # BooleanExpressionContext
            self.operator = None # Token
            self.right = None # BooleanExpressionContext

        def identifier(self):
            return self.getTypedRuleContext(pocketsParser.IdentifierContext,0)


        def compare(self):
            return self.getTypedRuleContext(pocketsParser.CompareContext,0)


        def expression(self):
            return self.getTypedRuleContext(pocketsParser.ExpressionContext,0)


        def booleanExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pocketsParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(pocketsParser.BooleanExpressionContext,i)


        def AND(self):
            return self.getToken(pocketsParser.AND, 0)

        def OR(self):
            return self.getToken(pocketsParser.OR, 0)

        def getRuleIndex(self):
            return pocketsParser.RULE_booleanExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpression" ):
                listener.enterBooleanExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpression" ):
                listener.exitBooleanExpression(self)



    def booleanExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = pocketsParser.BooleanExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_booleanExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.identifier()
            self.state = 111
            self.compare()
            self.state = 112
            self.expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 120
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = pocketsParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 114
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 115
                        localctx.operator = self.match(pocketsParser.AND)
                        self.state = 116
                        localctx.right = self.booleanExpression(3)
                        pass

                    elif la_ == 2:
                        localctx = pocketsParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 117
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 118
                        localctx.operator = self.match(pocketsParser.OR)
                        self.state = 119
                        localctx.right = self.booleanExpression(2)
                        pass

             
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUALS(self):
            return self.getToken(pocketsParser.EQUALS, 0)

        def GT(self):
            return self.getToken(pocketsParser.GT, 0)

        def GE(self):
            return self.getToken(pocketsParser.GE, 0)

        def LT(self):
            return self.getToken(pocketsParser.LT, 0)

        def LE(self):
            return self.getToken(pocketsParser.LE, 0)

        def NE(self):
            return self.getToken(pocketsParser.NE, 0)

        def getRuleIndex(self):
            return pocketsParser.RULE_compare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompare" ):
                listener.enterCompare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompare" ):
                listener.exitCompare(self)




    def compare(self):

        localctx = pocketsParser.CompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 260571136) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK(self):
            return self.getToken(pocketsParser.ASTERISK, 0)

        def identifier(self):
            return self.getTypedRuleContext(pocketsParser.IdentifierContext,0)


        def constant(self):
            return self.getTypedRuleContext(pocketsParser.ConstantContext,0)


        def getRuleIndex(self):
            return pocketsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = pocketsParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(pocketsParser.ASTERISK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.constant()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.IDENTIFIER)
            else:
                return self.getToken(pocketsParser.IDENTIFIER, i)

        def DOT(self):
            return self.getToken(pocketsParser.DOT, 0)

        def getRuleIndex(self):
            return pocketsParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = pocketsParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_identifier)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(pocketsParser.IDENTIFIER)
                self.state = 133
                self.match(pocketsParser.DOT)
                self.state = 134
                self.match(pocketsParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(pocketsParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULL(self):
            return self.getToken(pocketsParser.NULL, 0)

        def identifier(self):
            return self.getTypedRuleContext(pocketsParser.IdentifierContext,0)


        def INTEGER_VALUE(self):
            return self.getToken(pocketsParser.INTEGER_VALUE, 0)

        def MINUS(self):
            return self.getToken(pocketsParser.MINUS, 0)

        def PLUS(self):
            return self.getToken(pocketsParser.PLUS, 0)

        def DECIMAL_VALUE(self):
            return self.getToken(pocketsParser.DECIMAL_VALUE, 0)

        def QUOTED_STRING(self, i:int=None):
            if i is None:
                return self.getTokens(pocketsParser.QUOTED_STRING)
            else:
                return self.getToken(pocketsParser.QUOTED_STRING, i)

        def getRuleIndex(self):
            return pocketsParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):
